Closed Bug 1654603 Opened 5 years ago Closed 5 years ago

contentEditables with embedded divs throw off textmarkers.

Categories

(Core :: Disability Access APIs, defect, P1)

80 Branch
Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox80 --- wontfix
firefox81 --- fixed

People

(Reporter: MarcoZ, Assigned: eeejay)

Details

(Whiteboard: [Mac2020_2])

Attachments

(1 file)

STR, with VoiceOver on:

  1. Visit data:text/html,<div contentEditable="true" tabindex="0" role="textbox" aria-multiline="true"><div><br /></div></div>
  2. After focus lands in the contentEditable, type something.

Result: VoiceOver doesn't consistently speak the text being typed. Moreover, contrary to normal inputs and textareas, a connected braille display does not show the typed text. In regular inputs and textareas, it already does that after bug 1653421 landed.

A slightly more complicated version of this can be found at https://twitter.com, when composing a new tweet.

Looks like it is not the textmarker's fault. We apparently should be dispatching the events from the root editable node, and not the embedded div.

Assignee: nobody → eitan
Priority: -- → P1

VoiceOver expects text value change events to originate from the editable ancestor.

Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1df915086ba8 Support text entry in contenteditable nested nodes. r=morgan
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(eitan)
Flags: needinfo?(eitan)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: