Bug 1654603 - Support text entry in contenteditable nested nodes. r=morgan

VoiceOver expects text value change events to originate from the editable ancestor.

Differential Revision: https://phabricator.services.mozilla.com/D85050