accessible/mac/mozTextAccessible.h
@@ -69,6 +69,12 @@
 #pragma mark - mozAccessible
 
 // override
+- (void)handleAccessibleTextChangeEvent:(NSString*)change
+                               inserted:(BOOL)isInserted
+                            inContainer:(const mozilla::a11y::AccessibleOrProxy&)container
+                                     at:(int32_t)start;
+
+// override
 - (void)handleAccessibleEvent:(uint32_t)eventType;
 
 @end
